version 1.0.9 * New theme screenshot with credits * New improved support to YITH various plugins * Fix header backgrounds not working * Fix missing focus on mobile menu opener button * Fix untranslatable text on header template * Fix function name prefix in widgets.php file * Fix readme file structure

--- a/sass/navigation/_menus.scss
+++ b/sass/navigation/_menus.scss
@@ -173,7 +173,6 @@
 .menu-toggle,
 .main-navigation.toggled ul {
     display: block;
-    outline: none;
 }
 
 
